--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site settings
 # ─────────────
-baseurl: /1718-3CMO-BaP-arnevrom
+baseurl: /1718-BaP # the subpath of your site, e.g. /blog
 # host   : 127.0.0.1
 # port   : 4000
 
@@ -21,7 +21,7 @@ defaults:
     values:
       layout: vertical
 
-exclude:s
+exclude:
   - Gemfile
   - README.md
 
